add basic style

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    <input id="input" type="text">
-    <button id="submit">Login</button>
+    <div id="inputContainer">
+        <input id="input" type="text" placeholder="Enter Token" required>
+        <button id="submit">Login</button>
+    </div>
 </body>
 </html>
