all basic http with upgrade to ws erver and env file

--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="inputContainer">
-        <input id="input" type="text" placeholder="Enter Token" required>
-        <button id="submit">Login</button>
-    </div>
+    <button id="send">Send</button>
 </body>
 </html>
